# persistent-typed-db

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  README.md  flake.nix  package.yaml  persistent-typed-db.cabal  stack-lts-12.yaml  stack.yaml
.github/workflows/: haskell.yml
src/Database/Persist/: Typed.hs
test/: EsqueletoSpec.hs
