cabal-version: 1.12
name:           persistent-typed-db
version:        0.1.0.6
synopsis:       Type safe access to multiple database schemata.
description:    See README.md for more details, examples, and fun.
category:       Web
homepage:       https://github.com/parsonsmatt/persistent-typed-db#readme
bug-reports:    https://github.com/parsonsmatt/persistent-typed-db/issues
author:         Matt Parsons
maintainer:     parsonsmatt@gmail.com
copyright:      2017 Matt Parsons
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/parsonsmatt/persistent-typed-db

library
  exposed-modules:
      Database.Persist.Typed
  other-modules:
      Paths_persistent_typed_db
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wcompat -Wincomplete-uni-patterns
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , conduit >=1.3.0
    , http-api-data
    , monad-logger
    , path-pieces
    , persistent >=2.13.0 && < 2.14
    , resource-pool
    , resourcet >=1.2.0
    , template-haskell
    , text
    , transformers
  default-language: Haskell2010

test-suite specs
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      EsqueletoSpec
      Paths_persistent_typed_db
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.10
    , bytestring
    , conduit >=1.3.0
    , esqueleto
    , hspec
    , http-api-data
    , monad-logger
    , path-pieces
    , persistent >= 2.13
    , persistent-typed-db
    , resource-pool
    , resourcet >=1.2.0
    , template-haskell
    , text
    , transformers
  build-tool-depends: 
    hspec-discover:hspec-discover
  default-language: Haskell2010
